--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
   height: 100vh;
   width: 100vw;
   display: grid;
-  grid-template: auto / 1fr 3fr 1fr;
+  grid-template: auto / auto;
   /* your properties here */
 }
 
