--- a/index.css
+++ b/index.css
@@ -8,8 +8,7 @@ body {
   height: 100vh;
   width: 100vw;
   display: grid;
-  grid-template: repeat(4, 1fr) / repeat(3, 1fr)
-  grid-auto-columns: 50px;
+  grid-template: repeat(4, 1fr) / repeat(3, 1fr);
   /* your properties here */
 }
 
