Automatically backed up by Learn

--- a/index.css
+++ b/index.css
@@ -23,6 +23,6 @@ body {
   grid-area: 2 / 2 / 4 / 4;
   height: 50%;
   width: 50%;
-  justify-self: stretch;
+  justify-self: center;
   align-self: center;
 }
